[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "unitgate"
version = "0.1.0"
description = "Catch broken physics equations before they become confident AI claims (dimensional analysis)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["physics", "dimensional-analysis", "verification", "ai-safety", "claim-checking"]
dependencies = []

[project.scripts]
unitgate = "unitgate.__main__:main"

[tool.setuptools.packages.find]
include = ["unitgate*"]
